# water_analysis

./: .dockerignore  .editorconfig  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  init_db.py  main.py  pyproject.toml  requirements.txt  seed_admin.py
app/config/: database.py  logging.py  response.py  settings.py
app/controllers/: anomaly.py  auth.py  report.py  task.py  upload.py
app/frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
app/handlers/: error_handlers.py
app/middlewares/: auth.py
app/models/: __init__.py  anomaly.py  raw_data.py  task.py  user.py
app/routers/: amap.py  anomaly.py  auth.py  dashboard.py  report.py  task.py  upload.py
app/schemas/: __init__.py  anomaly.py  auth.py  report.py  task.py  upload.py
app/services/: anomaly_detector.py  celery_tasks.py  data_service.py  feature_extractor.py  interpolation.py  milvus_service.py  report_generator.py  visualization.py
app/static/: index.html
app/utils/: auth_middleware.py  exceptions.py  jwt_util.py  log_config.py
data/3d/: 15396745-3327-4fe8-8ead-344021b17157_chlorophyll.html  15396745-3327-4fe8-8ead-344021b17157_dissolved_oxygen.html  15396745-3327-4fe8-8ead-344021b17157_ph.html  15396745-3327-4fe8-8ead-344021b17157_temperature.html  (+21 more)
deploy/: docker-compose.yml  nginx.conf
docs/: core_requirements.md
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: App.vue
scripts/: init_db.py
static/: index.html
tests/: _reset_progress.py  conftest.py  test_full.py  test_health.py  test_services.py
(+257 files in other folders)
